@@ -358,7 +358,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
                 <configuration>
-                </configuration>
+                    <argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
+		        </configuration>
             </plugin>
             <plugin>
                 <groupId>org.eluder.coveralls</groupId>
